# escape-the-abyss

./: CMakeLists.txt  README.md
assets/models/monster/: DPAOV0JUTWT1HF0547S5R57ZC.mtl
assets/models/spider_man/: 1RJEIUEY8H0QSVGTS3EZLVAF6.mtl
include/: model_loader.h
src/: main.cpp  model_loader.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
